Menu collapses correctly on desktop.

--- a/ClientApp/src/app/shared/components/elements/nav-menu/nav-menu.component.scss
+++ b/ClientApp/src/app/shared/components/elements/nav-menu/nav-menu.component.scss
@@ -1,3 +1,7 @@
+.navbar {
+  --bs-navbar-padding-x: 1rem;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -30,6 +34,10 @@ html {
     
 }
 
+.nav-search {
+    width: 50%;
+}
+
 #search::placeholder {
-    /*color: white;*/
+  /*color: white;*/
 }
